# aaflib

./: CMakeLists.txt  README.md  aa.h  aa_aaf.h  aa_aafapprox.cpp  aa_aafarithm.cpp  aa_aafcommon.cpp  aa_aafspecial.cpp  aa_aaftrigo.cpp  aa_exceptions.cpp  aa_exceptions.h  aa_interval.cpp  aa_interval.h  aa_rounding.cpp  aa_rounding.h
